Fix for bug 620164

Removing MulOverflow